<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:id="@+id/layout_profile"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin">

    <ui.sample.ui.custom.CircularImageView
        android:id="@+id/imageview_profile"
        android:layout_width="@dimen/profile_image_width"
        android:layout_height="@dimen/profile_image_width"
        android:scaleType="centerCrop"
        android:transitionName="@string/transition_author_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/image_13"/>

    <TextView
        android:id="@+id/textview_name"
        style="@style/TextStyleName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_toEndOf="@id/imageview_profile"
        android:transitionName="@string/transition_author_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageview_profile"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="NAME"/>

    <TextView
        android:id="@+id/textview_description"
        style="@style/TextStyleDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_name"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin_half"
        android:layout_toEndOf="@id/imageview_profile"
        android:minLines="2"
        android:transitionName="@string/transition_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageview_profile"
        app:layout_constraintTop_toBottomOf="@+id/textview_name"
        tools:text="DESCRIPTION"/>

    <TextView
        android:id="@+id/textview_views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:drawablePadding="@dimen/margin_half"
        android:drawableStart="@drawable/ic_view"
        android:drawableTint="@color/icons"
        android:textColor="@color/icons"
        android:textSize="12sp"
        android:transitionName="@string/transition_views"
        app:layout_constraintEnd_toStartOf="@+id/guideline_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_description"
        tools:text="1029"/>

    <TextView
        android:id="@+id/textview_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:drawablePadding="@dimen/margin_half"
        android:drawableStart="@drawable/ic_comment"
        android:drawableTint="@color/icons"
        android:textColor="@color/icons"
        android:textSize="12sp"
        android:transitionName="@string/transition_comments"
        app:layout_constraintEnd_toStartOf="@+id/guideline_2"
        app:layout_constraintStart_toStartOf="@+id/guideline_1"
        app:layout_constraintTop_toBottomOf="@+id/textview_description"
        tools:text="429"/>

    <TextView
        android:id="@+id/textview_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:drawablePadding="@dimen/margin_half"
        android:drawableStart="@drawable/ic_heart"
        android:drawableTint="@color/icons"
        android:textColor="@color/icons"
        android:textSize="12sp"
        android:transitionName="@string/transition_likes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_2"
        app:layout_constraintTop_toBottomOf="@+id/textview_description"
        tools:text="19"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66"/>

</android.support.constraint.ConstraintLayout>